@@ -4,6 +4,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.ObjectUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -18,12 +19,15 @@ import uk.gov.hmcts.reform.prl.enums.sendmessages.InternalMessageReplyToEnum;
 import uk.gov.hmcts.reform.prl.enums.sendmessages.InternalMessageWhoToSendToEnum;
 import uk.gov.hmcts.reform.prl.enums.sendmessages.MessageAboutEnum;
 import uk.gov.hmcts.reform.prl.enums.sendmessages.MessageStatus;
+import uk.gov.hmcts.reform.prl.enums.sendmessages.SendOrReply;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.common.CodeAndLabel;
 import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicList;
 import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicListElement;
 import uk.gov.hmcts.reform.prl.models.common.judicial.JudicialUser;
 import uk.gov.hmcts.reform.prl.models.complextypes.uploadadditionalapplication.AdditionalApplicationsBundle;
+import uk.gov.hmcts.reform.prl.models.complextypes.uploadadditionalapplication.C2DocumentBundle;
+import uk.gov.hmcts.reform.prl.models.complextypes.uploadadditionalapplication.OtherApplicationsBundle;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.dto.hearings.HearingDaySchedule;
 import uk.gov.hmcts.reform.prl.models.dto.hearings.Hearings;
@@ -54,7 +58,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static org.apache.commons.collections.CollectionUtils.isNotEmpty;
@@ -62,6 +65,9 @@ import static org.apache.logging.log4j.util.Strings.concat;
 import static org.apache.logging.log4j.util.Strings.isNotBlank;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.AM_LOWER_CASE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.AM_UPPER_CASE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.AWP_C2_APPLICATION_SNR_CODE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.AWP_OTHER_APPLICATION_SNR_CODE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.AWP_STATUS_SUBMITTED;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COMMA;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURT_ADMIN;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURT_ADMIN_ROLE;
@@ -73,6 +79,7 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.LEGAL_ADVISER;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.LEGAL_ADVISER_ROLE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.PM_LOWER_CASE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.PM_UPPER_CASE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.UNDERSCORE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.URL_STRING;
 import static uk.gov.hmcts.reform.prl.enums.sendmessages.MessageStatus.CLOSED;
 import static uk.gov.hmcts.reform.prl.enums.sendmessages.MessageStatus.OPEN;
@@ -253,7 +260,7 @@ public class SendAndReplyService {
                 return messageElement;
             })
             .sorted(Comparator.comparing(m -> m.getValue().getUpdatedTime(), Comparator.reverseOrder()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
 
@@ -326,7 +333,7 @@ public class SendAndReplyService {
                     return element(messageElement.getId(), updatedMessage);
                 }
                 return messageElement;
-            }).collect(Collectors.toList());
+            }).toList();
     }
 
     public Map<String, Object> returnMapOfOpenMessages(List<Element<Message>> messages) {
@@ -421,10 +428,10 @@ public class SendAndReplyService {
                                 .code(concat(hearingId, " - ").concat(hearingType)).build();
                         }
                         return null;
-                    }).filter(Objects::nonNull).collect(Collectors.toList())).orElse(Collections.emptyList());
+                    }).filter(Objects::nonNull).toList()).orElse(Collections.emptyList());
                 }).map(this::getDynamicListElements)
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
 
             return getDynamicList(hearingDropdowns);
         }
@@ -434,8 +441,8 @@ public class SendAndReplyService {
     }
 
     private List<DynamicListElement> getDynamicListElements(List<CodeAndLabel> dropdowns) {
-        return dropdowns.stream().map(dropdown -> DynamicListElement.builder().code(dropdown.getCode()).label(dropdown.getLabel()).build()).collect(
-            Collectors.toList());
+        return dropdowns.stream().map(dropdown -> DynamicListElement.builder().code(dropdown.getCode()).label(dropdown.getLabel()).build())
+            .toList();
     }
 
     private Map<String, String> getRefDataMap(String authorization, String s2sToken, String serviceCode, String hearingTypeCategoryId) {
@@ -469,6 +476,8 @@ public class SendAndReplyService {
     }
 
     public DynamicList getOtherApllicationsList(CaseData caseData) {
+        String otherApplicationLabel = "Other applications - ";
+        String c2ApplicationLabel = "C2 application - ";
 
         List<Element<AdditionalApplicationsBundle>> additionalApplicationElements;
 
@@ -476,19 +485,36 @@ public class SendAndReplyService {
             List<DynamicListElement> dynamicListElements = new ArrayList<>();
             additionalApplicationElements = caseData.getAdditionalApplicationsBundle();
             additionalApplicationElements.stream().forEach(additionalApplicationsBundleElement -> {
-                if (additionalApplicationsBundleElement.getValue().getOtherApplicationsBundle() != null) {
-                    dynamicListElements.add(DynamicListElement.builder().code("Other applications")
-                                                .label("Other applications - "
-                                                           .concat(additionalApplicationsBundleElement.getValue()
-                                                                       .getOtherApplicationsBundle().getUploadedDateTime()))
-                                                .build());
+                AdditionalApplicationsBundle additionalApplicationsBundle = additionalApplicationsBundleElement.getValue();
+
+                if (null != additionalApplicationsBundle.getOtherApplicationsBundle()) {
+                    OtherApplicationsBundle otherApplicationsBundle = additionalApplicationsBundle.getOtherApplicationsBundle();
+                    if (null != otherApplicationsBundle.getApplicationStatus()
+                        && otherApplicationsBundle.getApplicationStatus().equals(AWP_STATUS_SUBMITTED)) {
+                        dynamicListElements.add(DynamicListElement.builder()
+                                                    .code(AWP_OTHER_APPLICATION_SNR_CODE
+                                                              .concat(UNDERSCORE)
+                                                              .concat(otherApplicationsBundle.getUploadedDateTime()))
+                                                    .label(otherApplicationLabel
+                                                               .concat(otherApplicationsBundle.getUploadedDateTime()))
+                                                    .build());
+                    }
                 }
-                if (additionalApplicationsBundleElement.getValue().getC2DocumentBundle() != null) {
-                    dynamicListElements.add(DynamicListElement.builder().code("C2 application")
-                                                .label("C2 application - "
-                                                           .concat(additionalApplicationsBundleElement.getValue()
-                                                                       .getC2DocumentBundle().getUploadedDateTime()))
-                                                .build());
+
+                if (null != additionalApplicationsBundle.getC2DocumentBundle()) {
+                    C2DocumentBundle c2DocumentBundle = additionalApplicationsBundle.getC2DocumentBundle();
+                    if (null != c2DocumentBundle.getApplicationStatus()
+                        && c2DocumentBundle.getApplicationStatus().equals(AWP_STATUS_SUBMITTED)) {
+                        dynamicListElements.add(DynamicListElement.builder()
+                                                    .code(AWP_C2_APPLICATION_SNR_CODE
+                                                              .concat(UNDERSCORE)
+                                                              .concat(c2DocumentBundle.getUploadedDateTime()))
+                                                    .label(c2ApplicationLabel
+                                                               .concat(additionalApplicationsBundle
+                                                                           .getC2DocumentBundle().getUploadedDateTime()))
+                                                    .build());
+                    }
+
                 }
             });
             return getDynamicList(dynamicListElements);
@@ -553,7 +579,7 @@ public class SendAndReplyService {
 
         List<Category> parentCategories = categoriesAndDocuments.getCategories().stream()
             .sorted(Comparator.comparing(Category::getCategoryName))
-            .collect(Collectors.toList());
+            .toList();
 
         List<DynamicListElement> dynamicListElementList = new ArrayList<>();
         createDynamicListFromSubCategories(parentCategories, dynamicListElementList, null, null);
@@ -775,7 +801,7 @@ public class SendAndReplyService {
     public static List<Element<Message>> getOpenMessages(List<Element<Message>> messages) {
         return nullSafeCollection(messages).stream()
             .filter(element -> OPEN.equals(element.getValue().getStatus()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public CaseData populateMessageReplyFields(CaseData caseData, String authorization) {
@@ -969,13 +995,17 @@ public class SendAndReplyService {
                     //retain the original subject & date sent
                     replyMessage.setMessageSubject(message.getMessageSubject());
                     replyMessage.setDateSent(message.getDateSent());
+                    replyMessage.setSelectedApplicationCode(StringUtils.stripToNull(message.getSelectedApplicationCode()));
+                    replyMessage.setSelectedFutureHearingCode(StringUtils.stripToNull(message.getSelectedFutureHearingCode()));
+                    replyMessage.setJudicialOrMagistrateTierCode(StringUtils.stripToNull(message.getJudicialOrMagistrateTierCode()));
+                    replyMessage.setSelectedSubmittedDocumentCode(StringUtils.stripToNull(message.getSelectedSubmittedDocumentCode()));
 
                     return element(messageElement.getId(), replyMessage);
                 }
                 return messageElement;
             })
             .sorted(Comparator.comparing(m -> m.getValue().getUpdatedTime(), Comparator.reverseOrder()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private MessageHistory buildReplyMessageHistory(Message message) {
@@ -1100,5 +1130,27 @@ public class SendAndReplyService {
         messages.sort(Comparator.comparing(m -> m.getValue().getUpdatedTime(), Comparator.reverseOrder()));
 
         return messages;
+    }
+
+    public String fetchAdditionalApplicationCodeIfExist(CaseData caseData, SendOrReply sendOrReply) {
+        Message message = null;
+        if (SEND.equals(sendOrReply)) {
+            message = caseData.getSendOrReplyMessage()
+                .getSendMessageObject();
+            return message != null ? getValueCode(message.getApplicationsList()) : null;
+        } else {
+            UUID messageId = elementUtils.getDynamicListSelectedValue(
+                caseData.getSendOrReplyMessage().getMessageReplyDynamicList(), objectMapper);
+
+            Optional<Element<Message>> optionalMessageElement = caseData.getSendOrReplyMessage()
+                .getMessages().stream()
+                .filter(messageElement -> messageElement.getId().equals(messageId))
+                .findFirst();
+            if (optionalMessageElement.isPresent()) {
+                message = optionalMessageElement.get().getValue();
+            }
+
+            return message != null ? message.getSelectedApplicationCode() : null;
+        }
     }
 }
