@@ -17,7 +17,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_PEOPLE_IN_THE_CASE_REVISED;
@@ -41,7 +40,7 @@ public class OtherPeopleInTheCaseRevisedChecker implements EventChecker {
         if (othersToNotify.isPresent()) {
             List<PartyDetails> others = caseData.getOtherPartyInTheCaseRevised()
                 .stream().map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             if (others.isEmpty()) {
                 return false;
@@ -68,7 +67,7 @@ public class OtherPeopleInTheCaseRevisedChecker implements EventChecker {
         if (othersToNotify.isPresent()) {
             List<PartyDetails> others = caseData.getOtherPartyInTheCaseRevised()
                 .stream().map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             boolean started = others.stream().anyMatch(Objects::nonNull);
             if (started) {
